data/all_generated_tests/raw_wast_tests/call_InvalidorInconsistentControlFlowGraph_3546.wast
;; 5. **Test with Invalid Type Signature Matching**:     - **Description**: Attempt to call a function with an incorrect number or type of arguments on the stack.     - **Constraint Checked**: Ensures proper type checking and argument validation for function calls.     - **CFG Relation**: Evaluates how the CFG deals with mismatched argument types and potential invalid paths due to type inconsistencies.

(assert_invalid
  (module
    (func $test-type-signature (call 1 (i32.const 1) (i64.const 1)))
    (func (param i32 i32))
  )
  "type mismatch"
)